# cloudxr-vs-ipad

./: .gitignore  HUONG-DAN-BUILD-IPAD-CLOUDXR.md  INSTALL-CLOUDXR-SERVER-LINUX-SUCCESS.md  MACOS-HANDOVER-STATUS.md  README.md  UBUNTU-WEBCAM-EXAMPLE.md  record.sh  ubuntu-webcam-example.sh
cloudxr-apple-generic-viewer/: .gitattributes  .gitignore  Config.xcconfig  LICENSE  README.md
cloudxr-apple-generic-viewer/CloudXRViewer.xcodeproj/: project.pbxproj
cloudxr-apple-generic-viewer/CloudXRViewer.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
cloudxr-apple-generic-viewer/CloudXRViewer.xcodeproj/xcshareddata/xcschemes/: CloudXRViewer-iOS.xcscheme  CloudXRViewer-visionOS.xcscheme
cloudxr-apple-generic-viewer/CloudXRViewer/Assets.xcassets/CloudXRViewer-iOS.appiconset/: Contents.json
cloudxr-apple-generic-viewer/CloudXRViewer/Common/: AppDelegate.swift  AppModel.swift  Color+hex.swift  GuestMode.swift  ServerActionsView.swift  SessionConfigView+extensions.swift  SessionConfigView.swift  StarRatingView.swift  TestHelper.swift  UIConstants.swift  UIStyles.swift  Utilities.swift  ViewerApp.swift  WindowStateManager.swift
cloudxr-apple-generic-viewer/CloudXRViewer/iOS/: CloudXRViewer-iOS-Info.plist  LaunchView+iOS.swift  SessionConfigView+iOS.swift  StreamingView+extensions+iOS.swift  StreamingView+iOS.swift
cloudxr-apple-generic-viewer/CloudXRViewer/visionOS/: CloudXRViewer-visionOS-Info.plist  ImmersiveView.swift  LaunchView+visionOS.swift  MainContentView+visionOS.swift  SessionConfigView+visionOS.swift  UIStyles+visionOS.swift  WindowUI.swift
cloudxr-apple-generic-viewer/CloudXRViewer/visionOS/Placement/: Placement+Extensions.swift
cloudxr-framework/: .gitignore  LICENSE  Package.swift  README.md  THIRD-PARTY-LICENSES.txt
cloudxr-lovr-sample/: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  build.sh  run.bat  run.sh
cloudxr-lovr-sample/plugins/nvidia/: CMakeLists.txt
cloudxr-lovr-sample/plugins/nvidia/examples/cloudxr/: audio_manager.lua  camera_hook.lua  cloudxr_manager.lua  conf.lua  headset_manager.lua  main.lua  recorder.lua  renderer.lua
cloudxr-lovr-sample/plugins/nvidia/examples/cloudxr/meta-quest-touch-plus/: SOURCE.md
cloudxr-lovr-sample/plugins/nvidia/examples/cloudxr/tests/: cloudxr_manager_record_feedback_test.lua  recorder_gpu_capture_test.lua  run_lua_tests.sh
cloudxr-lovr-sample/plugins/nvidia/include/: README.md
cloudxr-lovr-sample/plugins/nvidia/lib/linux-x86_64/: README.md
cloudxr-lovr-sample/plugins/nvidia/lib/windows-x86_64/: README.md
cloudxr-lovr-sample/plugins/nvidia/src/: l_nvidia_cloudxr.c  nvidia_cloudxr_opaque_data.c  nvidia_cloudxr_opaque_data.h  nvidia_cloudxr_runtime.c  nvidia_cloudxr_runtime.h
cloudxr-lovr-sample/tools/: check_server_logs.sh  record_control_api.py
recordings/: my-webcam.webm  screen-test.webm  webcam-test.webm
runtime/: VERSION  libcudart.so.12  libssl.so.3  libssl_nvst.so.3  openxr_cloudxr.json
runtime/include/: cxrServiceAPI.h
runtime/include/openxr/: XR_NV_opaque_data_channel.h
